--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -92,4 +92,5 @@
     <string name="Rec_5">Jenis Aktifitas</string>
     <string name="label_reg7">Unggah Foto Identitas</string>
     <string name="button_label_reg">Unggah</string>
+    <string name="label_icon9">Aktifitas Belakangan</string>
 </resources>
