--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -93,4 +93,5 @@
     <string name="label_reg7">Unggah Foto Identitas</string>
     <string name="button_label_reg">Unggah</string>
     <string name="label_icon9">Aktifitas Belakangan</string>
+    <string name="logout_button">Keluar</string>
 </resources>
