--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -149,7 +149,7 @@
     <string name="error_login_custom_token_mismatch">The custom token corresponds to a different audience.</string>
     <string name="error_login_credential_malformed_or_expired">The supplied auth credential is malformed or has expired.</string>
     <string name="error_login_invalid_email">The email address is badly formatted.</string>
-    <string name="error_login_wrong_password">The password is invalid or the user does not have a password.</string>
+    <string name="error_login_wrong_password">The password is not match.</string>
     <string name="error_login_user_mismatch">The supplied credentials do not correspond to the previously signed in user.</string>
     <string name="error_login_requires_recent_login">This operation is sensitive and requires recent authentication. Log in again before retrying this request.</string>
     <string name="error_login_accounts_exits_with_different_credential">An account already exists with the same email address but different sign-in credentials. Sign in using a provider associated with this email address.</string>
@@ -158,11 +158,12 @@
     <string name="error_login_user_disabled">The user account has been disabled by an administrator.</string>
     <string name="error_login_user_not_found">There is no user record corresponding to this identifier. The user may have been deleted.</string>
     <string name="error_login_operation_not_allowed">This operation is not allowed. You must enable this service in the console.</string>
-    <string name="error_login_password_is_weak">The given password is invalid.</string>
+    <string name="error_login_password_is_weak">The given password is Weak.</string>
     <string name="error_login_user_token_expired">The user\'s credential is no longer valid. The user must sign in again</string>
     <string name="error_login_invalid_user_token">The user\'s credential is no longer valid. The user must sign in again.</string>
     <string name="error_login_default_error">Error is not defined</string>
     <string name="user_created_success">User Created Successfully</string>
     <string name="user_created_failed">Failed Creating User</string>
+    <string name="logout_success">Successfully Signed Out</string>
 
 </resources>
