minor update on password textfield toast

--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -114,4 +114,5 @@
     <string name="user_created_success">Akun Berhasil Dibuat</string>
     <string name="user_created_failed">Akun Gagal Dibuat</string>
     <string name="logout_success">Berhasil Keluar</string>
+    <string name="password_less">Kata Sandi harus 8 karakter.</string>
 </resources>
