Fixing UI "Obat Layanan Screen"

--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -69,6 +69,8 @@
     <string name="Daftar_5">Daftar Obat Yang Ditanggung JKN</string>
     <string name="Daftar_6">Syarat Dan Ketentuan JKN</string>
     <string name="Daftar_7">Skrining Mandiri COVID-19</string>
+    <string name="Daftar_8">Unduh File Keputusan Menteri Sosial</string>
+    <string name="Daftar_9">Daftar Obat</string>
     <string name="InformasiKlinik1">Nama Klinik</string>
     <string name="InformasiKlinik3">Jumlah Dokter</string>
     <string name="InformasiKlinik5">Jam Buka</string>
