--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,6 +100,8 @@
     <string name="Daftar_5">Medicines That Are Covered by JKN</string>
     <string name="Daftar_6">JKN\'s Terms and Conditions</string>
     <string name="Daftar_7">COVID-19 Independent Screening</string>
+    <string name="Daftar_8">Download the Decree of the Minister of Social Affairs</string>
+    <string name="Daftar_9">Medicines List</string>
     <string name="FaskesName1" translatable="false">Puskesmas Sidorejo Lor</string>
     <string name="FaskesLoc1" translatable="false">Jl. Diponegoro No.100, Sidorejo Lor, Kec. Sidorejo, Kota Salatiga, Jawa Tengah 50714</string>
     <string name="FaskesKontak" translatable="false">Kontak Klinik</string>
