--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -99,6 +99,7 @@ Syarat dan Ketentuan:\n
 5. Menyetujui bahwa informasi yang terisi dibuat dengan sebenarnya, apabila informasi yang terisi tidak benar maka Pemohon
     bersedia dikenakan sanksi sesuai dengan peraturan perundang-undangan yang berlaku.
     </string>
+    <string name="Daftar_12">Skrining Mandiri</string>
     <string name="InformasiKlinik1">Nama Klinik</string>
     <string name="InformasiKlinik3">Jumlah Dokter</string>
     <string name="InformasiKlinik5">Jam Buka</string>
