--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -207,5 +207,6 @@ Terms and Conditions: \n
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="title_activity_article_details">ArticleDetailsActivity</string>
+    <string name="title_activity_form_konsul">FormKonsulActivity</string>
 
 </resources>
