add string resource to skrinning and add terms condition to firebase

--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -72,6 +72,8 @@
     <string name="Daftar_8">Unduh File Keputusan Menteri Sosial</string>
     <string name="Daftar_9">Daftar Obat</string>
     <string name="Daftar_10">Syarat dan Ketentuan\</string>
+    <string name="Skrinning_pilihan_1">Ya</string>
+    <string name="Skrinning_pilihan_2">Tidak</string>
     <string name="Daftar_11">
         Pernyataan menerima dan menyetujui syarat dan ketentuan pendaftaran badan usaha/ badan hukum lainnya untuk terdaftar dalam Program Jaminan Kesehatan Nasional – Kartu Indonesia Sehat (JKN-KIS) BPJS Kesehatan: \n \n
 
