--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -74,6 +74,7 @@
     <string name="Daftar_10">Syarat dan Ketentuan\</string>
     <string name="Skrinning_pilihan_1">Ya</string>
     <string name="Skrinning_pilihan_2">Tidak</string>
+    <string name="obat_toast">Unduh Gagal</string>
     <string name="Daftar_11">
         Pernyataan menerima dan menyetujui syarat dan ketentuan pendaftaran badan usaha/ badan hukum lainnya untuk terdaftar dalam Program Jaminan Kesehatan Nasional – Kartu Indonesia Sehat (JKN-KIS) BPJS Kesehatan: \n \n
 
